kubernetes/deployments/fusionauth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusionauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fusionauth
  template:
    metadata:
      labels:
        app: fusionauth
    spec:
      containers:
        - env:
            - name: DATABASE_USER
              value: fusionauth
            - name: DATABASE_PASSWORD
              value: hkaLBM3RVnyYeYeqE3WI1w2e4Avpy0Wd5O3s3
            - name: DATABASE_ROOT_PASSWORD
            - name: DATABASE_ROOT_USER
              value: postgres
            - name: DATABASE_URL
              value: jdbc:postgresql://fusionauth-db:5432/fusionauth
            - name: FUSIONAUTH_MEMORY
              value: 256M
            - name: FUSIONAUTH_SEARCH_SERVERS
              value: http://fusionauth-search:9200
          image: fusionauth/fusionauth-app:latest
          name: fusionauth
          ports:
            - containerPort: 9011
          resources: {}
      restartPolicy: Always
