kubernetes/deployments/search-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: fusionauth-search
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: fusionauth-search
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms256m -Xmx256m
        # NOTE:
        # To prevent cannot lock memory issue: https://stackoverflow.com/a/45041560
        - name: MAX_LOCKED_MEMORY
          value: unlimited
        #- name: bootstrap.memory_lock
        #  value: "true"
        - name: cluster.name
          value: fusionauth
        image: docker.elastic.co/elasticsearch/elasticsearch:6.3.1
        name: search
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: es-data
      restartPolicy: Always
      volumes:
      - name: es-data
        persistentVolumeClaim:
          claimName: es-data
status: {}
